# face_swap

./: README.md  Task_Handbook.md  pipeline.sh  pyproject.toml  requirement.txt  requirements.txt
configs/face_swap/: ablation_aug.yaml  ablation_channels.yaml  baseline.yaml  data_prepare.yaml  eval.yaml  export.yaml  export_edge.yaml  infer.yaml  trt.yaml
data/metadata/: sample_pairs_train.csv  sample_pairs_val.csv  splits.json
docs/: README.md  configs.md  data.md  export_edge.md  faq.md  get_started.md  streaming.md  troubleshooting.md
eval/: metrics.py
models/: generator_mobileswaplite.py  id_encoder_mobile.py
scripts/: bash_scripts.sh  benchmark_edge.sh  eval.py  eval.sh  eval_accuracy.py  export.sh  infer.sh  infer_image.py  infer_video.py  prepare_data.sh  preprocess_lfw.py  rt_face_swap.py  train.py  train.sh  trt.sh  update_dataset.py  validate_manifest.sh
service/: app.py
specs/001-face-swap-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/data/: download_lfw.py  lfw_dataset.py  manifest.py  preprocess_lfw.py  retinaface_align.py  transforms.py  update_dataset.py  validate_manifest.py
src/exporters/: benchmarks.py  onnx_exporter.py  onnxruntime_runner.py  tensorrt_exporter.py
src/interfaces/: api.py  cli.py  rest.py
src/models/: arcface.py  losses.py  unet_face_swap.py
src/utils/: perf.py  (+9 more)
utils/: blend.py  checksums.py  dataset_pairs.py  exif_fix.py  face_align.py  face_align_infer.py  image_io.py  infer_core.py  logging_utils.py  losses.py  mask.py  pairs.py  splits.py  train_utils.py
(+28 files in other folders)
